new activity files added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".NumbersActivity" />
-        <activity android:name=".FamilyMembersActivity" />
+        <activity android:name=".FamilyActivity" />
         <activity android:name=".ColorsActivity" />
         <activity android:name=".PhrasesActivity"></activity>
     </application>
